Update titles and links for fizzbuzz, add correct logo, add README

--- a/code.html
+++ b/code.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100">
 	<head>
-		<title>App Name: A Coding Project By David Blackwelder</title>
+		<title>FizzBuzz: A Coding Project By David Blackwelder</title>
 		<!-- Required meta tags -->
 		<meta charset="utf-8" />
 		<meta
@@ -35,7 +35,7 @@
 						class="d-inline-block align-text-center px-5"
 						height="70"
 					/>
-					APP NAME</a
+					FizzBuzz</a
 				>
 				<button
 					class="navbar-toggler"
@@ -62,7 +62,10 @@
 							>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" target="_blank" href="https://github.com/"
+							<a
+								class="nav-link"
+								target="_blank"
+								href="https://github.com/davidblackwelder/fizzbuzz"
 								>Git Repo</a
 							>
 						</li>
@@ -83,7 +86,7 @@
 		<main class="flex-shrink-0">
 			<div class="container py-4 px-5">
 				<h1 class="border-1 border-bottom border-dark">
-					The Code for APP NAME
+					The Code for FizzBuzz
 				</h1>
 				<div class="row row-cols-1 row-cols-lg-2">
 					<div class="col-lg-8">
