--- a/app.html
+++ b/app.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100">
 	<head>
-		<title>App Name: A Coding Project By David Blackwelder</title>
+		<title>FizzBuzz: A Coding Project By David Blackwelder</title>
 		<!-- Required meta tags -->
 		<meta charset="utf-8" />
 		<meta
@@ -34,7 +34,7 @@
 						class="d-inline-block align-text-center px-5"
 						height="70"
 					/>
-					APP NAME</a
+					FizzBuzz</a
 				>
 				<button
 					class="navbar-toggler"
@@ -61,7 +61,10 @@
 							<a class="nav-link" href="code.html">The Code</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" target="_blank" href="https://github.com/"
+							<a
+								class="nav-link"
+								target="_blank"
+								href="https://github.com/davidblackwelder/fizzbuzz"
 								>Git Repo</a
 							>
 						</li>
