--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100">
 	<head>
-		<title>App Name: A Coding Project By David Blackwelder</title>
+		<title>FizzBuzz: A Coding Project By David Blackwelder</title>
 		<!-- Required meta tags -->
 		<meta charset="utf-8" />
 		<meta
@@ -34,7 +34,7 @@
 						class="d-inline-block align-text-center px-5"
 						height="70"
 					/>
-					APP NAME</a
+					FizzBuzz</a
 				>
 				<button
 					class="navbar-toggler"
@@ -61,7 +61,10 @@
 							<a class="nav-link" href="code.html">The Code</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" target="_blank" href="https://github.com/"
+							<a
+								class="nav-link"
+								target="_blank"
+								href="https://github.com/davidblackwelder/fizzbuzz"
 								>Git Repo</a
 							>
 						</li>
@@ -83,12 +86,14 @@
 				<div class="row g-5 row-cols-1 row-cols-lg-2">
 					<div class="col order-last order-lg-first">
 						<h1 class="display-5 fw-bold lh-1 mb-3">
-							APP NAME: A Coding Project
+							FizzBuzz: A Coding Project
 						</h1>
 						<h4 class="lead">
-							Live life one loop at a time. A javascript coding exercise using
-							loops. Write a program that displays the numbers from 0 to 100.
-							Display the even numbers in <strong>BOLD.</strong>
+							When it counts you FizzBuzz. A javascript coding exercise using
+							loops. Write a program that prints the numbers from 1 to 100 and
+							for multiples of '3' display "Fizz" instead of the number and for
+							the multiples of '5' display "Buzz". If a multiple of both display
+							"FizzBuzz".
 						</h4>
 						<ul class="fa-ul pt-2 checklist">
 							<li>
@@ -149,7 +154,7 @@
 					</div>
 					<div class="col d-flex align-content-center">
 						<img
-							src="img/bold-logo.svg"
+							src="img/fizzbuzz-logo.svg"
 							alt="Bold Logo"
 							class="img fluid center-block d-block mx-auto"
 							width="500"
