--- a/app.html
+++ b/app.html
@@ -83,7 +83,69 @@
 
 		<!-- ==== Main Section ==== -->
 		<main class="flex-shrink-0">
-			<div class="container"></div>
+			<div class="container">
+				<div class="row row-cols-1 row-cols-lg-2">
+					<div class="col-lg-4 border-end border-2">
+						<h1>FizzBuzz: A Coding Project</h1>
+						<h4 class="lead">
+							When it counts you FizzBuzz. A javascript coding exercise using
+							loops. Write a program that prints the numbers from 1 to 100 and
+							for multiples of '3' display "Fizz" instead of the number and for
+							the multiples of '5' display "Buzz". If a multiple of both display
+							"FizzBuzz".
+						</h4>
+						<h2 class="mt-5 border-bottom border-2">Instructions</h2>
+						<p>
+							Enter a starting value and an ending value. Press the button and
+							the values will appear.
+						</p>
+					</div>
+					<div class="col-lg-8 col">
+						<div>
+							<h5>Enter Values</h5>
+							<form action="" class="row gy-2 gx-3">
+								<div class="col">
+									<input
+										id="fizzValue"
+										type="number"
+										class="form-control"
+										placeholder="Choose your Fizz value"
+										value="3"
+										arial-label="Choose your Fizz value"
+									/>
+								</div>
+								<div class="col">
+									<input
+										id="buzzValue"
+										type="number"
+										class="form-control"
+										placeholder="Choose your Buzz value"
+										value="5"
+										arial-label="Choose your Buzz value"
+									/>
+								</div>
+								<div class="col-12 d-flex justify-content-end">
+									<button
+										id="btnSubmit"
+										type="button"
+										class="btn btn-dark btn-lg mt-2"
+									>
+										Display the FizzBuzz!
+									</button>
+								</div>
+							</form>
+							<h2 class="mt-5 border-bottom border-2">Results</h2>
+							<div class="table-responsive">
+								<table class="table table-striped table-sm">
+									<tbody id="results">
+										<!-- Results Go Here -->
+									</tbody>
+								</table>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</main>
 
 		<!-- ==== Footer Section ==== -->
@@ -141,6 +203,16 @@
 			</div>
 		</footer>
 
+		<template id="fbTemplate">
+			<tr>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+		</template>
+
 		<!-- Bootstrap JS -->
 		<script
 			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
@@ -153,5 +225,8 @@
 			crossorigin="anonymous"
 		></script>
 		<script src="js/site.js"></script>
+		<script>
+			document.getElementById("btnSubmit").addEventListener("click", getValues);
+		</script>
 	</body>
 </html>
