--- a/code.html
+++ b/code.html
@@ -181,10 +181,29 @@
 					</div>
 					<div class="col-lg-4">
 						<p>The code is structured into three functions.</p>
-						<h5>Hello World</h5>
+						<h5>getValues</h5>
 						<p>
-							Hello World is a function that displays an alert with the message
-							of "Hello World"
+							The getValues function is responsible for getting the values from
+							the page and validating that the values are integers. If the
+							values are integers the other two functions will be called. This
+							function gets called when the button is clicked.
+						</p>
+
+						<h5>generateData</h5>
+						<p>
+							This function takes in the fizzValue and the buzzValue and then
+							loops through the numbers 1 to 100 to see which numbers are
+							divisible by both, one, or none of the fizzValue and buzzValue.
+							The results of that loop are then pushed into an array that is
+							returned to be used by the displayData function.
+						</p>
+
+						<h5>displayData</h5>
+						<p>
+							This function loops through the array returned by the generateData
+							function and creates a five column table to display the data. This
+							function also clears the table first before adding new content to
+							the page.
 						</p>
 					</div>
 				</div>
