Update instructions on app page

--- a/app.html
+++ b/app.html
@@ -96,8 +96,8 @@
 						</h4>
 						<h2 class="mt-5 border-bottom border-2">Instructions</h2>
 						<p>
-							Enter a starting value and an ending value. Press the button and
-							the values will appear.
+							Enter a fizz value and a buzz value. Press the button and the
+							values will appear.
 						</p>
 					</div>
 					<div class="col-lg-8 col">
